--- a/custom.css
+++ b/custom.css
@@ -31,23 +31,25 @@ h4 .fas {
     margin-right: 10px;
 }
 
-th:nth-child(1) {
+th:nth-child(1),
+th:nth-child(2) {
     width: 52px;
 }
 
-th:nth-child(2) {
+th:nth-child(3) {
     width: 65px;
 }
 
 th:nth-child(1) .fas,
 th:nth-child(2) .fas,
-th:nth-child(4) .fas,
+th:nth-child(3) .fas,
 th:nth-child(5) .fas,
-th:nth-child(6) .fas {
+th:nth-child(6) .fas,
+th:nth-child(7) .fas {
     margin-right: 0;
 }
 
-th:nth-child(6) .fas + .fas {
+th:nth-child(7) .fas + .fas {
     margin-left: 7px;
 }
 
@@ -55,52 +57,52 @@ th:nth-child(6) .fas + .fas {
     display: inline;
 }
 
-.table td:nth-child(3) {
+.table td:nth-child(4) {
     font-weight: bold;
 }
 
-.table td:nth-child(13),
 .table td:nth-child(14),
-td:nth-child(17) {
+.table td:nth-child(15),
+td:nth-child(18) {
     white-space: nowrap;
 }
 
-td:nth-child(11) .badge,
-td:nth-child(18) .badge {
+td:nth-child(12) .badge,
+td:nth-child(19) .badge {
     padding: .4em;
 }
 
-td:nth-child(11) .badge {
+td:nth-child(12) .badge {
     width: 55px;
 }
 
-td:nth-child(18) .badge {
+td:nth-child(19) .badge {
     width: 85px;
 }
 
-td:nth-child(11) .badge::after,
-td:nth-child(18) .badge::after,
-td:nth-child(18) .badge::before,
+td:nth-child(12) .badge::after,
+td:nth-child(19) .badge::after,
+td:nth-child(19) .badge::before,
 .external::after {
     font-family: 'Font Awesome 5 Free', sans-serif;
     font-size: 0.8rem;
 }
 
-td:nth-child(11) .badge::after,
-td:nth-child(18) .badge::after {
+td:nth-child(12) .badge::after,
+td:nth-child(19) .badge::after {
     padding-left: 8px;
 }
 
-td:nth-child(18) .badge::before {
+td:nth-child(19) .badge::before {
     content: '\f5fd';
     padding-right: 8px;
 }
 
-td:nth-child(11) .badge::after {
+td:nth-child(12) .badge::after {
     content: '\f0c9';
 }
 
-td:nth-child(18) .badge::after {
+td:nth-child(19) .badge::after {
     content: '\f019';
 }
 
@@ -114,14 +116,14 @@ td:nth-child(18) .badge::after {
     text-decoration: none;
 }
 
-td:nth-child(17) a {
+td:nth-child(18) a {
     display: inline-block;
     border-radius: 5px;
     opacity: .8;
     vertical-align: middle;
 }
 
-td:nth-child(17) a:hover {
+td:nth-child(18) a:hover {
     opacity: 1;
 }
 
