--- a/custom.css
+++ b/custom.css
@@ -1,5 +1,9 @@
 /* General */
 
+body {
+    background: url('/img/gplaypattern.png');
+}
+
 .tablesorter-pager .btn-group-sm .btn {
     font-size: 1.2rem;
 }
@@ -10,6 +14,10 @@
 
 .container-fluid {
     max-width: 2048px;
+}
+
+.table {
+    background-color: white;
 }
 
 .table thead th {
@@ -61,48 +69,48 @@ th:nth-child(7) .fas + .fas {
     font-weight: bold;
 }
 
-.table td:nth-child(14),
 .table td:nth-child(15),
-td:nth-child(18) {
+.table td:nth-child(16),
+td:nth-child(19) {
     white-space: nowrap;
 }
 
-td:nth-child(12) .badge,
-td:nth-child(19) .badge {
+td:nth-child(13) .badge,
+td:nth-child(20) .badge {
     padding: .4em;
 }
 
-td:nth-child(12) .badge {
+td:nth-child(13) .badge {
     width: 55px;
 }
 
-td:nth-child(19) .badge {
+td:nth-child(20) .badge {
     width: 85px;
 }
 
-td:nth-child(12) .badge::after,
-td:nth-child(19) .badge::after,
-td:nth-child(19) .badge::before,
+td:nth-child(13) .badge::after,
+td:nth-child(20) .badge::after,
+td:nth-child(20) .badge::before,
 .external::after {
     font-family: 'Font Awesome 5 Free', sans-serif;
     font-size: 0.8rem;
 }
 
-td:nth-child(12) .badge::after,
-td:nth-child(19) .badge::after {
+td:nth-child(13) .badge::after,
+td:nth-child(20) .badge::after {
     padding-left: 8px;
 }
 
-td:nth-child(19) .badge::before {
+td:nth-child(20) .badge::before {
     content: '\f5fd';
     padding-right: 8px;
 }
 
-td:nth-child(12) .badge::after {
+td:nth-child(13) .badge::after {
     content: '\f0c9';
 }
 
-td:nth-child(19) .badge::after {
+td:nth-child(20) .badge::after {
     content: '\f019';
 }
 
@@ -116,14 +124,14 @@ td:nth-child(19) .badge::after {
     text-decoration: none;
 }
 
-td:nth-child(18) a {
+td:nth-child(19) a {
     display: inline-block;
     border-radius: 5px;
     opacity: .8;
     vertical-align: middle;
 }
 
-td:nth-child(18) a:hover {
+td:nth-child(19) a:hover {
     opacity: 1;
 }
 
