--- a/custom.css
+++ b/custom.css
@@ -39,25 +39,19 @@ h4 .fas {
     margin-right: 10px;
 }
 
-#mappers th:nth-child(1),
-#mappers th:nth-child(2) {
+.width-index {
     width: 52px;
 }
 
-#mappers th:nth-child(3) {
+.width-image {
     width: 65px;
 }
 
-#mappers th:nth-child(1) .fas,
-#mappers th:nth-child(2) .fas,
-#mappers th:nth-child(3) .fas,
-#mappers th:nth-child(5) .fas,
-#mappers th:nth-child(6) .fas,
-#mappers th:nth-child(7) .fas {
-    margin-right: 0;
+#songs th:nth-child(4) {
+    width: 500px;
 }
 
-#mappers th:nth-child(7) .fas + .fas {
+.table th .fas + .fas {
     margin-left: 7px;
 }
 
@@ -65,13 +59,15 @@ h4 .fas {
     display: inline;
 }
 
-#mappers .table td:nth-child(4) {
+#songs td:nth-child(3),
+#mappers td:nth-child(4) {
     font-weight: bold;
 }
 
-#mappers .table td:nth-child(15),
-#mappers .table td:nth-child(16),
-td:nth-child(19) {
+#songs td:nth-child(14),
+#mappers td:nth-child(15),
+td:nth-child(16),
+#mappers td:nth-child(19) {
     white-space: nowrap;
 }
 
@@ -124,14 +120,18 @@ td:nth-child(19) {
     text-decoration: none;
 }
 
-td:nth-child(19) a {
+#songs td:nth-child(15) a,
+#songs td:nth-child(16) a,
+#mappers td:nth-child(19) a {
     display: inline-block;
     border-radius: 5px;
     opacity: .8;
     vertical-align: middle;
 }
 
-td:nth-child(19) a:hover {
+#songs td:nth-child(15) a:hover,
+#songs td:nth-child(16) a:hover,
+#mappers td:nth-child(19) a:hover {
     opacity: 1;
 }
 
@@ -268,6 +268,28 @@ ul {
     cursor: inherit;
 }
 
+/* ScoreSaber */
+
+.expertplus {
+    color: #8f48db;
+}
+
+.expert {
+    color: #bf2a42;
+}
+
+.easy {
+    color: #3cb371;
+}
+
+.hard {
+    color: #ff6347;
+}
+
+.normal {
+    color: #59b0f4;
+}
+
 /* Sprite */
 
 .bg-stargazer {
@@ -275,79 +297,84 @@ ul {
     background: url('/img/sprite.png') -2px -2px;
 }
 
-.bg-andruzz {
+.bg-bsaber {
     width: 32px; height: 32px;
     background: url('/img/sprite.png') -38px -2px;
 }
 
-.bg-balsa {
+.bg-sabersongs {
     width: 32px; height: 32px;
     background: url('/img/sprite.png') -2px -38px;
 }
 
-.bg-assistant {
+.bg-beatsaver {
     width: 32px; height: 32px;
     background: url('/img/sprite.png') -38px -38px;
 }
 
-.bg-beatsaver {
+.bg-rorekk {
     width: 32px; height: 32px;
     background: url('/img/sprite.png') -74px -2px;
 }
 
-.bg-elliotttate {
+.bg-ikeiwa {
     width: 32px; height: 32px;
     background: url('/img/sprite.png') -74px -38px;
 }
 
-.bg-ikeiwa {
+.bg-zeekin {
     width: 32px; height: 32px;
     background: url('/img/sprite.png') -2px -74px;
 }
 
-.bg-kyle {
+.bg-pbrick {
     width: 32px; height: 32px;
     background: url('/img/sprite.png') -38px -74px;
 }
 
-.bg-bsaber {
+.bg-kyle {
     width: 32px; height: 32px;
     background: url('/img/sprite.png') -74px -74px;
 }
 
-.bg-n3tman {
+.bg-assistant {
     width: 32px; height: 32px;
     background: url('/img/sprite.png') -110px -2px;
 }
 
-.bg-rorekk {
+.bg-elliotttate {
     width: 32px; height: 32px;
     background: url('/img/sprite.png') -110px -38px;
 }
 
-.bg-sabersongs {
+.bg-skueaks {
     width: 32px; height: 32px;
     background: url('/img/sprite.png') -110px -74px;
 }
 
-.bg-skueaks {
+.bg-n3tman {
     width: 32px; height: 32px;
     background: url('/img/sprite.png') -2px -110px;
 }
 
-.bg-pbrick {
+.bg-balsa {
     width: 32px; height: 32px;
     background: url('/img/sprite.png') -38px -110px;
 }
 
-.bg-zeekin {
+.bg-xyonico {
     width: 32px; height: 32px;
     background: url('/img/sprite.png') -74px -110px;
 }
 
-.bg-xyonico {
+.bg-andruzz {
     width: 32px; height: 32px;
     background: url('/img/sprite.png') -110px -110px;
+}
+
+.bg-scoresaber {
+    width: 32px; height: 31px;
+    background: url('/img/sprite.png') -146px -2px;
 }
 
 @media (min-width: 576px) {
