--- a/custom.css
+++ b/custom.css
@@ -16,8 +16,12 @@ body {
     max-width: 2048px;
 }
 
-.table:not('#testplays') {
+.table {
     background-color: white;
+}
+
+#testplays {
+    background-color: transparent;
 }
 
 .table thead th {
@@ -160,7 +164,39 @@ ul {
     margin-top: -2px;
 }
 
-/* Card column */
+/* Card column / TestPlays */
+
+#testplays .card-header > .counter {
+    float: left;
+    padding: 0 .7rem;
+    border: 1px solid rgba(0, 0, 0, .125);
+    height: 32px;
+    line-height: 1.8rem;
+    border-radius: .4rem;
+}
+
+#testplays .card-footer {
+    font-weight: 500;
+}
+
+#testplays .card-body {
+    padding: 1rem;
+}
+
+#testplays .avatar,
+#testplays .avatar + .text {
+    vertical-align: middle;
+}
+
+#testplays .avatar {
+    margin-left: -42px;
+    padding-right: 10px;
+}
+
+#testplays .avatar + .text {
+    font-weight: bold;
+    font-size: 1.2rem;
+}
 
 #testplays .card-columns {
     -webkit-column-count: 1;
@@ -318,87 +354,104 @@ ul {
 /* Sprite */
 
 .bg-stargazer {
-    width: 32px; height: 32px;
+    width: 32px;
+    height: 32px;
     background: url('/img/sprite.png') -2px -2px;
 }
 
 .bg-bsaber {
-    width: 32px; height: 32px;
+    width: 32px;
+    height: 32px;
     background: url('/img/sprite.png') -38px -2px;
 }
 
 .bg-sabersongs {
-    width: 32px; height: 32px;
+    width: 32px;
+    height: 32px;
     background: url('/img/sprite.png') -2px -38px;
 }
 
 .bg-beatsaver {
-    width: 32px; height: 32px;
+    width: 32px;
+    height: 32px;
     background: url('/img/sprite.png') -38px -38px;
 }
 
 .bg-rorekk {
-    width: 32px; height: 32px;
+    width: 32px;
+    height: 32px;
     background: url('/img/sprite.png') -74px -2px;
 }
 
 .bg-ikeiwa {
-    width: 32px; height: 32px;
+    width: 32px;
+    height: 32px;
     background: url('/img/sprite.png') -74px -38px;
 }
 
 .bg-zeekin {
-    width: 32px; height: 32px;
+    width: 32px;
+    height: 32px;
     background: url('/img/sprite.png') -2px -74px;
 }
 
 .bg-pbrick {
-    width: 32px; height: 32px;
+    width: 32px;
+    height: 32px;
     background: url('/img/sprite.png') -38px -74px;
 }
 
 .bg-kyle {
-    width: 32px; height: 32px;
+    width: 32px;
+    height: 32px;
     background: url('/img/sprite.png') -74px -74px;
 }
 
 .bg-assistant {
-    width: 32px; height: 32px;
+    width: 32px;
+    height: 32px;
     background: url('/img/sprite.png') -110px -2px;
 }
 
 .bg-elliotttate {
-    width: 32px; height: 32px;
+    width: 32px;
+    height: 32px;
     background: url('/img/sprite.png') -110px -38px;
 }
 
 .bg-skueaks {
-    width: 32px; height: 32px;
+    width: 32px;
+    height: 32px;
     background: url('/img/sprite.png') -110px -74px;
 }
 
 .bg-n3tman {
-    width: 32px; height: 32px;
+    width: 32px;
+    height: 32px;
     background: url('/img/sprite.png') -2px -110px;
 }
 
 .bg-balsa {
-    width: 32px; height: 32px;
+    width: 32px;
+    height: 32px;
     background: url('/img/sprite.png') -38px -110px;
 }
 
 .bg-xyonico {
-    width: 32px; height: 32px;
+    width: 32px;
+    height: 32px;
     background: url('/img/sprite.png') -74px -110px;
 }
 
 .bg-andruzz {
-    width: 32px; height: 32px;
+    width: 32px;
+    height: 32px;
     background: url('/img/sprite.png') -110px -110px;
 }
 
 .bg-scoresaber {
-    width: 32px; height: 31px;
+    width: 32px;
+    height: 31px;
     background: url('/img/sprite.png') -146px -2px;
 }
 
