Attach playlists to all videos, show overlays

--- a/custom.css
+++ b/custom.css
@@ -466,32 +466,35 @@ ul {
 /* VideoJS */
 
 .video-js .vjs-overlay {
-    visibility: hidden;
-    opacity: 0;
-    font-size: 2rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    margin: .5rem;
 }
 
 .video-js .vjs-overlay-background {
     background-color: rgba(43, 51, 63, .7);
     width: auto;
-    padding: 1rem 5rem;
-    margin-top: 2rem;
-    margin-right: 4rem;
 }
 
-.vjs-fullscreen .vjs-control-bar {
-    font-size: 1.5rem;
-}
-
-.vjs-fullscreen.vjs-has-started .vjs-overlay {
+.vjs-has-started .vjs-overlay {
     visibility: visible;
     opacity: 1;
     transition: opacity .1s;
 }
 
-.vjs-fullscreen.vjs-user-inactive.vjs-playing .vjs-overlay {
+.vjs-user-inactive.vjs-playing .vjs-overlay {
     opacity: 0;
-    transition: opacity 1s;
+    transition: opacity 3s;
+}
+
+.vjs-fullscreen .vjs-overlay {
+    font-size: 2.5rem;
+    padding: 1rem 3rem;
+    margin: 2rem;
+}
+
+.vjs-fullscreen .vjs-control-bar {
+    font-size: 1.5rem;
 }
 
 .vjs-paused.vjs-has-started .vjs-big-play-button {
