--- a/custom.css
+++ b/custom.css
@@ -8,6 +8,11 @@ body {
     font-size: 1.2rem;
 }
 
+.btn-nav {
+    background-color: #f7f7f7;
+    font-size: 2rem;
+}
+
 .jumbotron {
     background-color: #1a1a1a;
 }
