--- a/custom.css
+++ b/custom.css
@@ -72,7 +72,10 @@ h4 .fas {
     width: 65px;
 }
 
-#songs th:nth-child(4),
+#songs th:nth-child(4) {
+    width: 400px;
+}
+
 #recom th:nth-child(4) {
     width: 500px;
 }
@@ -91,10 +94,10 @@ h4 .fas {
     font-weight: bold;
 }
 
-#songs td:nth-child(14),
 #songs td:nth-child(18),
-#recom td:nth-child(11),
-#recom td:nth-child(15),
+#songs td:nth-child(22),
+#recom td:nth-child(12),
+#recom td:nth-child(16),
 #mappers td:nth-child(15),
 td:nth-child(16),
 #mappers td:nth-child(19) {
@@ -150,22 +153,22 @@ td:nth-child(16),
     text-decoration: none;
 }
 
-#songs td:nth-child(15) a,
-#songs td:nth-child(16) a,
+#songs td:nth-child(20) a,
+#songs td:nth-child(21) a,
 #mappers td:nth-child(19) a,
-#recom td:nth-child(12) a,
-#recom td:nth-child(13) a {
+#recom td:nth-child(13) a,
+#recom td:nth-child(14) a {
     display: inline-block;
     border-radius: 5px;
     opacity: .8;
     vertical-align: middle;
 }
 
-#songs td:nth-child(15) a:hover,
-#songs td:nth-child(16) a:hover,
+#songs td:nth-child(20) a:hover,
+#songs td:nth-child(21) a:hover,
 #mappers td:nth-child(19) a:hover,
-#recom td:nth-child(12) a:hover,
-#recom td:nth-child(13) a:hover {
+#recom td:nth-child(13) a:hover,
+#recom td:nth-child(14) a:hover {
     opacity: 1;
 }
 
@@ -356,6 +359,10 @@ ul {
 .form-inline .custom-select,
 .form-inline .input-group {
     width: auto;
+}
+
+.copy:hover {
+    cursor: pointer;
 }
 
 .form-control {
