--- a/custom.css
+++ b/custom.css
@@ -397,106 +397,89 @@ ul {
 
 /* Sprite */
 
-.bg-stargazer {
-    width: 32px;
-    height: 32px;
+.bg-andruzz {
+    width: 32px; height: 32px;
     background: url('/img/sprite.png') -2px -2px;
 }
 
-.bg-bsaber {
-    width: 32px;
-    height: 32px;
+.bg-balsa {
+    width: 32px; height: 32px;
     background: url('/img/sprite.png') -38px -2px;
 }
 
-.bg-sabersongs {
-    width: 32px;
-    height: 32px;
+.bg-beatsaver {
+    width: 32px; height: 32px;
     background: url('/img/sprite.png') -2px -38px;
 }
 
-.bg-beatsaver {
-    width: 32px;
-    height: 32px;
+.bg-bsaber {
+    width: 32px; height: 32px;
     background: url('/img/sprite.png') -38px -38px;
 }
 
-.bg-rorekk {
-    width: 32px;
-    height: 32px;
+.bg-elliotttate {
+    width: 32px; height: 32px;
     background: url('/img/sprite.png') -74px -2px;
 }
 
 .bg-ikeiwa {
-    width: 32px;
-    height: 32px;
+    width: 32px; height: 32px;
     background: url('/img/sprite.png') -74px -38px;
 }
 
-.bg-zeekin {
-    width: 32px;
-    height: 32px;
+.bg-kyle {
+    width: 32px; height: 32px;
     background: url('/img/sprite.png') -2px -74px;
 }
 
-.bg-pbrick {
-    width: 32px;
-    height: 32px;
+.bg-lolpants {
+    width: 32px; height: 32px;
     background: url('/img/sprite.png') -38px -74px;
 }
 
-.bg-kyle {
-    width: 32px;
-    height: 32px;
+.bg-n3tman {
+    width: 30px; height: 30px;
+    background: url('/img/sprite.png') -146px -2px;
+}
+
+.bg-pbrick {
+    width: 32px; height: 32px;
     background: url('/img/sprite.png') -74px -74px;
 }
 
-.bg-assistant {
-    width: 32px;
-    height: 32px;
+.bg-rorekk {
+    width: 32px; height: 32px;
     background: url('/img/sprite.png') -110px -2px;
 }
 
-.bg-elliotttate {
-    width: 32px;
-    height: 32px;
+.bg-sabersongs {
+    width: 32px; height: 32px;
     background: url('/img/sprite.png') -110px -38px;
 }
 
-.bg-skueaks {
-    width: 32px;
-    height: 32px;
-    background: url('/img/sprite.png') -110px -74px;
-}
-
-.bg-n3tman {
-    width: 32px;
-    height: 32px;
-    background: url('/img/sprite.png') -2px -110px;
-}
-
-.bg-balsa {
-    width: 32px;
-    height: 32px;
-    background: url('/img/sprite.png') -38px -110px;
-}
-
-.bg-xyonico {
-    width: 32px;
-    height: 32px;
-    background: url('/img/sprite.png') -74px -110px;
-}
-
-.bg-andruzz {
-    width: 32px;
-    height: 32px;
+.bg-scoresaber {
+    width: 32px; height: 31px;
     background: url('/img/sprite.png') -110px -110px;
 }
 
-.bg-scoresaber {
-    width: 32px;
-    height: 31px;
-    background: url('/img/sprite.png') -146px -2px;
+.bg-skueaks {
+    width: 32px; height: 32px;
+    background: url('/img/sprite.png') -110px -74px;
+}
+
+.bg-stargazer {
+    width: 32px; height: 32px;
+    background: url('/img/sprite.png') -2px -110px;
+}
+
+.bg-xyonico {
+    width: 32px; height: 32px;
+    background: url('/img/sprite.png') -38px -110px;
+}
+
+.bg-zeekin {
+    width: 32px; height: 32px;
+    background: url('/img/sprite.png') -74px -110px;
 }
 
 /* VideoJS */
