Add big height (prevent height resize bug)

--- a/custom.css
+++ b/custom.css
@@ -543,6 +543,7 @@ ul {
   background-color: rgba(255, 255, 255, 0.4);
   padding: 0.8rem;
   user-select: none;
+  min-height: 2000px;
 }
 .painter .body {
   border-top: 0;
