--- a/custom.scss
+++ b/custom.scss
@@ -534,6 +534,7 @@ ul {
         background-color: rgba(white, 0.4);
         padding: .8rem;
         user-select: none;
+        min-height: 2000px;
     }
 
     .body {
