Make paths relative

--- a/custom.scss
+++ b/custom.scss
@@ -1,7 +1,7 @@
 /* General */
 
 body {
-    background: url('/img/gplaypattern.png');
+    background: url('img/gplaypattern.png');
 }
 
 .tablesorter-pager .btn-group-sm .btn {
@@ -400,87 +400,87 @@ ul {
 
 .bg-alaanor {
     width: 32px; height: 32px;
-    background: url('/img/sprite.png') -3px -3px;
+    background: url('img/sprite.png') -3px -3px;
 }
 
 .bg-andruzz {
     width: 32px; height: 32px;
-    background: url('/img/sprite.png') -41px -3px;
+    background: url('img/sprite.png') -41px -3px;
 }
 
 .bg-assist {
     width: 32px; height: 32px;
-    background: url('/img/sprite.png') -3px -41px;
+    background: url('img/sprite.png') -3px -41px;
 }
 
 .bg-balsa {
     width: 32px; height: 32px;
-    background: url('/img/sprite.png') -41px -41px;
+    background: url('img/sprite.png') -41px -41px;
 }
 
 .bg-beatsaver {
     width: 32px; height: 32px;
-    background: url('/img/sprite.png') -79px -3px;
+    background: url('img/sprite.png') -79px -3px;
 }
 
 .bg-bsaber {
     width: 32px; height: 32px;
-    background: url('/img/sprite.png') -79px -41px;
+    background: url('img/sprite.png') -79px -41px;
 }
 
 .bg-elliotttate {
     width: 32px; height: 32px;
-    background: url('/img/sprite.png') -3px -79px;
+    background: url('img/sprite.png') -3px -79px;
 }
 
 .bg-ikeiwa {
     width: 32px; height: 32px;
-    background: url('/img/sprite.png') -41px -79px;
+    background: url('img/sprite.png') -41px -79px;
 }
 
 .bg-kyle {
     width: 32px; height: 32px;
-    background: url('/img/sprite.png') -79px -79px;
+    background: url('img/sprite.png') -79px -79px;
 }
 
 .bg-lolpants {
     width: 32px; height: 32px;
-    background: url('/img/sprite.png') -117px -3px;
+    background: url('img/sprite.png') -117px -3px;
 }
 
 .bg-n3tman {
     width: 30px; height: 30px;
-    background: url('/img/sprite.png') -155px -3px;
+    background: url('img/sprite.png') -155px -3px;
 }
 
 .bg-pbrick {
     width: 32px; height: 32px;
-    background: url('/img/sprite.png') -117px -41px;
+    background: url('img/sprite.png') -117px -41px;
 }
 
 .bg-rorekk {
     width: 32px; height: 32px;
-    background: url('/img/sprite.png') -117px -79px;
+    background: url('img/sprite.png') -117px -79px;
 }
 
 .bg-scoresaber {
     width: 32px; height: 31px;
-    background: url('/img/sprite.png') -117px -117px;
+    background: url('img/sprite.png') -117px -117px;
 }
 
 .bg-skueaks {
     width: 32px; height: 32px;
-    background: url('/img/sprite.png') -3px -117px;
+    background: url('img/sprite.png') -3px -117px;
 }
 
 .bg-xyonico {
     width: 32px; height: 32px;
-    background: url('/img/sprite.png') -41px -117px;
+    background: url('img/sprite.png') -41px -117px;
 }
 
 .bg-zeekin {
     width: 32px; height: 32px;
-    background: url('/img/sprite.png') -79px -117px;
+    background: url('img/sprite.png') -79px -117px;
 }
 
 /* VideoJS */
